# dwsolver

./: .dockerignore  .gitignore  ADDITIONAL_LICENSE_TERMS  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  Dockerfile  Dockerfile.compliance  GLPK_README  Makefile.am  Makefile.in  README  README.md  SECURITY.md  aclocal.m4  config.h.in  configure  configure.ac  dwsolver.pc.in
.github/agents/: compliance-audit.agent.md  copilot-instructions.md
.github/workflows/: build.yaml  ci-compliance.yml  ci-docker.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  release.yml
.specify/memory/: constitution.md
architecture/: README.md  component-map.md  data-flow.md  threading-flow.md
examples/book_bertsimas/: README  ex_relaxed_solution  guide_double  guide_single  guide_triple  master.cplex  monolithic.cplex  single_sub.cplex  sub1.doubleORtriple.cplex  sub2.double.cplex  sub2.triple.cplex  sub3.triple.cplex
examples/book_dantzig/: README  book_master.cplex  book_monolithic.cplex  book_sub1.cplex  book_sub2.cplex  book_sub3.cplex  ex_relaxed_solution  guidefile
examples/book_lasdon/: README  ex_relaxed_solution  guide_file  master.cplex  sub1.cplex  sub2.cplex
examples/four_sea/: README  dw_monolithic.cplex  ex_relaxed_solution  master.cplex  pre_master.cpxlp  subprob_1.cplex  subprob_2.cplex  subprob_3.cplex  subprob_4.cplex  testfile
examples/neg_y/: README  dw_monolithic.cplex  ex_relaxed_solution  master.cplex  sub1.cplex  sub2.cplex
examples/one_iter/: README  dw_monolithic.cplex  ex_relaxed_solution  guidefile  master.cplex  sub2.cplex
examples/single_sub/: README  dw_monolithic.cplex  ex_relaxed_solution  guidefile  master.cplex  sub1.cplex
examples/web_mitchell/: README  ex_relaxed_solution  guidefile  master.cplex  subprob.cplex
examples/web_trick/: README  ex_relaxed_solution  guide_file  master.cplex  monolithic.cplex  subprob.cplex  subprob_2.cplex
specs/001-as-built/: spec.md
specs/002-cross-platform-repair/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-github-actions-ci/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-github-actions-ci/checklists/: requirements.md
specs/003-github-actions-ci/contracts/: ci-workflow.md
specs/004-docker-containerized-build/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-docker-containerized-build/checklists/: requirements.md
specs/004-docker-containerized-build/contracts/: docker-interface.md
specs/005-windows-build-fix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-test-coverage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-test-coverage/checklists/: requirements.md
specs/007-architecture-diagrams/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-architecture-diagrams/checklists/: requirements.md
specs/007-architecture-diagrams/contracts/: component-map-contract.md  data-flow-contract.md  threading-flow-contract.md
specs/008-sei-cert-c-compliance/: acceptance-report.md  baseline-cppcheck.txt  baseline-warnings.txt  current-cppcheck.txt  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-sei-cert-c-compliance/checklists/: requirements.md
specs/008-sei-cert-c-compliance/contracts/: glpk-lock-state.md  lock-order.md  pthread-call-sites.md
specs/009-repo-structure-cleanup/: plan.md  spec.md  tasks.md
specs/009-repo-structure-cleanup/checklists/: requirements.md
specs/010-callable-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-callable-library/checklists/: requirements.md
specs/010-callable-library/contracts/: api.md
specs/011-remove-embedded-glpk/: baseline-tests.txt  data-model.md  plan.md  post-refactor-tests.txt  quickstart.md  research.md  spec.md  tasks.md
specs/011-remove-embedded-glpk/checklists/: requirements.md
specs/011-remove-embedded-glpk/contracts/: build-system.md
specs/012-release-infrastructure/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/012-release-infrastructure/checklists/: requirements.md
specs/012-release-infrastructure/contracts/: release-workflow.md  tarball-contents.md
specs/013-strict-c-posix-compliance/: acceptance-report.md  baseline-pre-warnings.txt  clang-analyze-post.txt  cppcheck-post.txt  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  warnings-post.txt
specs/013-strict-c-posix-compliance/checklists/: requirements.md
specs/013-strict-c-posix-compliance/contracts/: posix-header-audit.md
specs/014-iso-ts-17961-compliance/: acceptance-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-iso-ts-17961-compliance/audit/: clang-tidy-pre-remediation.txt  cppcheck-na-suppressions.txt  cppcheck-post-remediation.txt  cppcheck-pre-remediation.txt  tooling-guide.md  ts17961-compliance-matrix.md
specs/014-iso-ts-17961-compliance/checklists/: requirements.md
specs/015-openssf-passing-badge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-openssf-passing-badge/checklists/: requirements.md
specs/015-openssf-passing-badge/contracts/: CONTRIBUTING-contract.md  SECURITY-contract.md
src/: Makefile.am  Makefile.in  dw.h  dw_blas.c  dw_blas.h  dw_globals.c  dw_main.c  dw_phases.c  dw_phases.h  dw_rounding.c  dw_rounding.h  dw_solver.c  dw_solver.h  dw_subprob.c  dw_subprob.h  dw_subprob_utils.c  dw_subprob_utils.h  dw_support.c  dw_support.h  glpenv05.c  glpenv06.c  glpmpl03.c
tests/: Makefile.am  Makefile.in  dw-tests.sh  test_blas.c  test_guidefile.sh  test_lib_api.c  test_ts17961_enforcement.sh
tests/fixtures/: bad_count.guidefile  crlf_single_sub.guidefile  missing_file.guidefile
