## Process this file with automake to produce Makefile.in ##

ACLOCAL_AMFLAGS=-I m4

#SUBDIRS = include src
#DIST_SUBDIRS = src examples/book_bertsimas examples/book_dantzig \
#                   examples/book_lasdon examples/web_trick \
#                   examples/web_mitchell examples/four_sea
SUBDIRS = src

EXTRA_DIST = examples glpk-4.44.ThreadReady.patch GLPK_INSTALL GLPK_AUTHORS \
				GLPK_README GLPK_NEWS GLPK_THANKS ADDITIONAL_LICENSE_TERMS \
				ChangeLog
## eof ##
