## Process this file with automake to produce Makefile.in ##

ACLOCAL_AMFLAGS=-I m4

SUBDIRS = src tests

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = dwsolver.pc

EXTRA_DIST = examples third-party/glpk/glpk-4.44.ThreadReady.patch \
				third-party/glpk/GLPK_INSTALL third-party/glpk/GLPK_AUTHORS \
				third-party/glpk/GLPK_README third-party/glpk/GLPK_NEWS \
				third-party/glpk/GLPK_THANKS third-party/glpk/README \
				ADDITIONAL_LICENSE_TERMS \
				ChangeLog \
				dwsolver.pc.in
## eof ##
